# qt_ui_testing

./: .gitignore  CMakeLists.txt
src/: BaseDashboard.cpp  BaseDashboard.h  ChatDashboard.cpp  ChatDashboard.h  ChatManager.cpp  ChatManager.h  ChatMessage.h  ChatWindow.cpp  ChatWindow.h  MainWindow.cpp  MainWindow.h  SettingsDashboard.cpp  SettingsDashboard.h  SettingsManager.cpp  SettingsManager.h  main.cpp
